Added backslashes and single quotes

--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ WEB_ROOT='./data/www'
 # examples:
 
 # Linux:
-# WEB_ROOT="/var/www"
-# WEB_ROOT="/home/foo/website"
+# WEB_ROOT='/var/www'
+# WEB_ROOT='/home/foo/website'
 
 # Windows:
-# WEB_ROOT="C:/Users/foo/Documents/website"
-# WEB_ROOT="D:/Projects/website/www"
+# WEB_ROOT='C:\Users\foo\Documents\website'
+# WEB_ROOT='D:\Projects\website\www'
